# cinny-ut

./: 0008-24h-general.patch  0008-24h-setting.patch  0009-settings.patch  9004_Add-encrypted-icon.patch  9005_Add-encrypted-icon.patch  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md  cinny.apparmor  cinny.desktop.in  clickable.yaml  content-hub.json  main.cpp  manifest.json.in  prebuild.sh  wrapper
.github/: FUNDING.yml
.github/workflows/: build.yml  release_OpenStore.yml  release_github.yml
libs/qhttp/: CMakeLists.txt
patches/: 0001-Rename-session-name-to-Cinny-Ubuntu-Touch.patch  0002-Add-credits.patch  0003-Set-push-notifications-to-UTs-push-hook.patch  0004-Implement-qml-WebChannel.patch  0004-disable_cinny_notif_sounds.patch  0004-disable_currently_broken_view_pdf.patch  0005-Implement-WebChannel-for-qml-communication.patch  0006-Download-images-using-qml-backend.patch  0006-gestures.patch  0007-Download-files-using-qml-backend.patch  0007-settings.patch  0008-24h-devicetile.patch  0008-24h-roomintro.patch  0008-24h-time.patch  0008-24h-timedefinition.patch  0008-Download-pdfpreview-using-qml-backend.patch  0009-Add-credits.patch  0009-Download-recoverykeys-using-qml-backend.patch  0010-Download-cinnykeys-using-qml-backend.patch  0012-Rename-session-name-to-Cinny-Ubuntu-Touch.patch  0012-add_audio_downloadbutton.patch  9001-disable_upgrade.patch  9001_bump_vite_dependencie.patch  9003-connect-to-sync.patch  9003_add_audio_downloadbutton.patch  9004-downgrade_matrix-sdk.patch  9005-validator.patch  9006-backuprestore.patch  9007-polyfill.patch  patch_description.md
plugins/Backend/: CMakeLists.txt  backend.cpp  backend.h  plugin.cpp  plugin.h
po/: cinny.danfro.pot  de.po
push/: CMakeLists.txt  i18n.h  push.json
qml/: BottomGestureActionIndicator.qml  BottomNavigationGesture.qml  DownloadPage.qml  FlyingBackButton.qml  HorizontalSwipeHandler.qml  Main.qml  SwipeGestureHandler.qml  UploadPage.qml  qml.qrc
